# python-statisticalpackage-techniques

./: .nojekyll  _quarto.yml  index.html  index.qmd  index.xml  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
posts/GitHubFAQ/: Resource-not-accessible-by-integration.html  Resource-not-accessible-by-integration.qmd  chapter_header.html  chapter_header.qmd
posts/pytest101/: chapter_header.html  chapter_header.qmd  raise_error.qmd
posts/pytest101/pytest_scripts/: test_script_001.py  test_script_002.py
posts/python-packaging-guide/: chapter_header.html  chapter_header.qmd  gittag_versioning.html  gittag_versioning.qmd  src-layout-vs-flat-layout.html  src-layout-vs-flat-layout.qmd  versioning.html  versioning.qmd
posts/uv101/: chapter_header.html  chapter_header.qmd  getting-started-with-uv.html  getting-started-with-uv.qmd
site_libs/bootstrap/: bootstrap-55725599aa3e48df258510ee62625c7f.min.css  bootstrap-70207f8d3e68acf24cb1eac4b6867bc8.min.css  bootstrap-c1125b47291137879a1df344a2466a93.min.css  bootstrap-dark-3460d249130dc40ec67fc6f1a21e8660.min.css  bootstrap-dark-56481e330a13435ccd523f0d3aaf6cf6.min.css  bootstrap-dark-710e2c34a5053144c91d9424d45155ed.min.css  bootstrap-dark.min.css  bootstrap.min.css
