[tool.poetry]
name = "regmonkey-python-statisticalpackage-techniques"
version = "0.1.0"
description = ""
authors = ["RyoNak <nakagamiryo0901@gmail.com>"]
license = "MIT"
readme = "README.md" 
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"


[tool.poetry.group.quarto_env.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
regmonkey-style = "^1.6.1"
nbformat = "^5.10.4"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
