[project]
name = "regmonkey-python-statisticalpackage-techniques"
version = "0.1.0"
description = ""
authors = [
    "RyoNak <nakagamiryo0901@gmail.com>",
    {name = "RyoNak", email = "nakagamiryo0901@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md" 
requires-python = "<4.0,>=3.11"
dependencies = [
    "pytest<9.0.0,>=8.3.3",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.4",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "regmonkey-style>=1.6.1",
]

[tool.uv]
package = false